--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+1
+version: 1.1.1+2
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.19.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,18 +34,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   fluttertoast: ^8.0.8
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
-  file_picker: ^4.6.1
-  csv: ^5.0.1
-  path_provider: ^2.0.10
-  open_file: ^3.2.1
+  #file_picker: ^4.6.1
+  #csv: ^5.0.1
+ # path_provider: ^2.0.10
+ # open_file: ^3.2.1
   firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
   intl: ^0.17.0
   responsive_framework: ^0.2.0
   shared_preferences: ^2.0.7
+
+  #firebase_core: ^2.7.1
+ # flutterfire_cli: ^0.2.7
+ # cloud_firestore: ^4.4.4
+ # mysql1: ^0.20.0
+  http: ^0.13.6
+
 
 
 
