add review for holiday and change main color to blue

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "untitled",
-    "short_name": "untitled",
+    "name": "SJI EGYPT",
+    "short_name": "SJI EGYPT",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
