--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+2
+version: 2.3.3+4
 
 environment:
   sdk: ">=2.19.1 <3.0.0"
@@ -38,11 +38,12 @@ dependencies:
   fluttertoast: ^8.0.8
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
-  #file_picker: ^4.6.1
+ # file_picker: ^4.6.1
   #csv: ^5.0.1
  # path_provider: ^2.0.10
- # open_file: ^3.2.1
-  firedart: ^0.9.0+1
+  #open_file: ^3.2.1
+  ###################
+#  firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
   intl: ^0.17.0
   responsive_framework: ^0.2.0
@@ -53,6 +54,7 @@ dependencies:
  # cloud_firestore: ^4.4.4
  # mysql1: ^0.20.0
   http: ^0.13.6
+  dio: ^5.3.2
 
 
 
@@ -106,22 +108,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Montserrat
-      fonts:
-        - asset: assets/fonts/Montserrat-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Montserrat-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Montserrat-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Montserrat-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Montserrat-Regular.ttf
-          weight: 400
-    - family: IconBroken
-      fonts:
-        - asset: assets/icons/icons.ttf
+#  fonts:
+#    - family: Montserrat
+#      fonts:
+#        - asset: assets/fonts/Montserrat-Bold.ttf
+#           weight: 700
+#        - asset: assets/fonts/Montserrat-Light.ttf
+#           weight: 300
+#        - asset: assets/fonts/Montserrat-SemiBold.ttf
+#           weight: 600
+#        - asset: assets/fonts/Montserrat-Medium.ttf
+#           weight: 500
+#        - asset: assets/fonts/Montserrat-Regular.ttf
+#           weight: 400
+#    - family: IconBroken
+#      fonts:
+#        - asset: assets/icons/icons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
