--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.3.3+4
+version: 2.3.6+6
 
 environment:
   sdk: ">=2.19.1 <3.0.0"
@@ -38,26 +38,26 @@ dependencies:
   fluttertoast: ^8.0.8
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
+  ###################
  # file_picker: ^4.6.1
   #csv: ^5.0.1
- # path_provider: ^2.0.10
+  #path_provider: ^2.0.10
   #open_file: ^3.2.1
   ###################
 #  firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
+  data_table_2: ^2.4.2
   intl: ^0.17.0
   responsive_framework: ^0.2.0
   shared_preferences: ^2.0.7
-
   #firebase_core: ^2.7.1
- # flutterfire_cli: ^0.2.7
+  #flutterfire_cli: ^0.2.7
  # cloud_firestore: ^4.4.4
- # mysql1: ^0.20.0
+
   http: ^0.13.6
   dio: ^5.3.2
-
-
-
+  percent_indicator: ^4.2.3
+  upgrader: ^4.8.1
 
 dev_dependencies:
   flutter_test:
