--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.3.6+6
+version: 1.1.1+1
 
 environment:
   sdk: ">=2.19.1 <3.0.0"
@@ -39,10 +39,10 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   ###################
- # file_picker: ^4.6.1
-  #csv: ^5.0.1
-  #path_provider: ^2.0.10
-  #open_file: ^3.2.1
+  file_picker: ^4.6.1
+  csv: ^5.0.1
+  path_provider: ^2.0.10
+  open_file: ^3.2.1
   ###################
 #  firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
@@ -58,6 +58,7 @@ dependencies:
   dio: ^5.3.2
   percent_indicator: ^4.2.3
   upgrader: ^4.8.1
+  syncfusion_flutter_xlsio: ^21.2.3
 
 dev_dependencies:
   flutter_test:
