--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   ###################
-  #file_picker: ^4.6.1
+  #file_picker: ^6.1.1
   #csv: ^5.0.1
   #path_provider: ^2.0.10
   #open_file: ^3.2.1
@@ -47,24 +47,24 @@ dependencies:
 #  firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
   data_table_2: ^2.4.2
-  intl: ^0.17.0
-  responsive_framework: ^0.2.0
+  intl: ^0.18.0
+  responsive_framework: ^1.1.1
   shared_preferences: ^2.0.7
   #firebase_core: ^2.7.1
   #flutterfire_cli: ^0.2.7
  # cloud_firestore: ^4.4.4
 
-  http: ^0.13.6
+  http: ^1.1.2
   dio: ^5.3.2
   percent_indicator: ^4.2.3
-  upgrader: ^4.8.1
-  syncfusion_flutter_xlsio: ^21.2.3
+  upgrader: ^8.4.0
+  syncfusion_flutter_xlsio: ^24.1.41
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.11.0"
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: "launcher_icon"
