--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.4.0+10
+version: 2.4.1+11
 
 environment:
   sdk: ">=2.19.1 <3.0.0"
@@ -39,10 +39,10 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
   ###################
-  file_picker: ^6.1.1
-  csv: ^5.0.1
-  path_provider: ^2.0.10
-  open_file: ^3.2.1
+#  file_picker: ^6.1.1
+  #csv: ^5.0.1
+ # path_provider: ^2.0.10
+ # open_file: ^3.2.1
   ###################
 #  firedart: ^0.9.0+1
   fluent_ui: ^4.1.3
@@ -50,7 +50,7 @@ dependencies:
   intl: ^0.18.0
   responsive_framework: ^1.1.1
   shared_preferences: ^2.0.7
-  firebase_core: ^2.7.1
+  #firebase_core: ^2.7.1
   #flutterfire_cli: ^0.2.7
   #cloud_firestore: ^4.4.4
 
@@ -59,7 +59,7 @@ dependencies:
   percent_indicator: ^4.2.3
   upgrader: ^9.0.0
   syncfusion_flutter_xlsio: ^24.1.41
-  firebase_messaging: ^14.7.14
+  #firebase_messaging: ^14.7.14
 
 dev_dependencies:
   flutter_test:
